fix: dialog props with invalid hooks
